# SaveDesktop

./: .gitconfig  .gitignore  .htaccess  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  _config.yml  com.github.vikdevelop.SaveDesktop.yaml  com.github.vikdevelop.gnome-config-saver.yaml  dconf-override.patch  generate_wiki_pages_from_xml.py  index.html  install_native.sh  installation.sh  io.github.vikdevelop.SaveDesktop.json  io.github.vikdevelop.SaveDesktop.yaml  meson.build  native_updater.py  page_404.html  po_change.py  python3-konsave.json  python3-pyperclip.json  run.sh  run_natively.sh  savedesktop  savedesktop.doap  snapcraft.yaml
.github/: pull_request_template.md
_includes/: footer.html  footer.md  head.html
_layouts/: default.html
css/: html-style.css  markdown-style.css
data/: io.github.vikdevelop.SaveDesktop.desktop.in  io.github.vikdevelop.SaveDesktop.gschema.xml  io.github.vikdevelop.SaveDesktop.metainfo.xml.in  io.github.vikdevelop.SaveDesktop.service.in  meson.build
data/icons/: meson.build
flatpak/: com.github.vikdevelop.SaveDesktop.desktop  com.github.vikdevelop.SaveDesktop.metainfo.xml  com.github.vikdevelop.gnome-config-saver.desktop  com.github.vikdevelop.gnome-config-saver.metainfo.xml  io.github.vikdevelop.SaveDesktop.desktop  io.github.vikdevelop.SaveDesktop.gschema.xml  io.github.vikdevelop.SaveDesktop.metainfo.xml
issue-report/: index.html
native/: directories.sh  install_native.sh  native_installer.py  native_updater.py  run_natively.sh
open-issue/: index.html
po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  de.po  en.po  es.po  et.po  fi.po  fr.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  meson.build  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  savedesktop.pot  sv.po  ta.po  tr.po  uk.po  zh_Hans.po
src/: README.md  backup_flatpaks.sh  config.py  flatpak_apps_dialog.py  globals.py  install_flatpak_from_script.py  items_dialog.py  localazation.py  localization.py  main.py  main_window.py  main_window.py\  meson.build  network_sharing.py  open_wiki.py  password_check_gui.py  password_store.py  periodic_backups.py  periodic_saving.py  savedesktop.gresource.xml  savedesktop.in  server.py  shortcuts_window.py  synchronization.py  tty_environments.py
src/core/: __init__.py  archive.py  config.py  de_config.py  flatpaks_installer.py  meson.build  password_store.py  periodic_saving.py  synchronization.py  synchronization_setup.py
src/gui/: __init__.py  custom_dirs_dialog.py  flatpak_apps_dialog.py  flatpaks_installer_window.py  items_dialog.py  meson.build  more_options_dialog.py  password_checker.py  synchronization_dialogs.py  window.py
src/gui/templates/: shortcuts_window.ui
translations/: ar.json  ca.json  ca.xml  cs.json  cs.xml  de.json  de.xml  en.json  en.xml  es.json  (+30 more)
(+152 files in other folders)
