core_sources = [ '__init__.py',
		'archive.py',
                'config.py',
                'flatpaks_installer.py',
                'password_store.py',
                'periodic_saving.py',
                'synchronization.py',
                'synchronization_setup.py',
              ]
              
install_data(core_sources, install_dir: moduledir / 'core')