gui_sources = [ '__init__.py',
                'window.py',
                'password_checker.py',
                'items_dialog.py',
                'more_options_dialog.py',
                'synchronization_dialogs.py', 
              ]
              
install_data(gui_sources, install_dir: moduledir / 'gui')
